browser/web/css/style.css
.cometarContainer
{
	display: flex;
	min-width:500px;
	overflow:hidden;
}

/* concept tree */

#treeMenu, #modulesMenu
{
	width:100%;
	height:40px;
	display:flex;
	justify-content:space-between; 
}

#containerSpacer
{
	width:20px;
}

.treeMenuItem:first-child, .modulesMenuItem:first-child
{
	border-right:1px solid #999;
	border-left-width:0px;
}

.treeMenuItem, .modulesMenuItem
{
	border-style: solid;
	border-color: #999;
	border-width:0px;
	border-bottom-width:1px;
	height:32px;
	font-size:20px;
	cursor:pointer;
	background-color:#DDD;	
	border-top:1px solid black;
	border-left:1px solid black;
	display:flex;
	flex:1;
	justify-content:center; 
	align-items:center;
}

#conceptTreeContainer > div, .treeMenuItem, #treeMenu, #modulesMenu, #modulesContainer > div, .modulesMenuItem
{
	border-radius: 0px 0px 0px 0px;
}

.treeContentItem
{
	display:none;
}

#conceptTreeContainer > div, #modulesContainer > div
{
	border-left:1px solid black;
	border-right:1px solid black;
	border-bottom:1px solid black;
	display:flex;
	height:100%;
	box-sizing: border-box;
	overflow:hidden;
	flex-direction: column;
}

#modulesContainer
{
	flex:1;
	margin-right:10px;
}

#modulesContents
{
	flex:1;
	overflow-x:hide;
	overflow-y: auto;
}

#conceptTreeContainer
{
	width:25%;
}

#conceptTree
{
	width:100%;
	overflow-y:auto;
	overflow-x:hidden;
	height:100%;
}

#treeContent
{
	width:100%;
	overflow:hidden;
	flex:1;
}

.ui-resizable-handle.ui-resizable-e
{
	width:10px;
	background-image:url('../images/verticalstripes.png');
	margin-right:2px;
	top:0px;
	border:1px solid black;
	border-radius: 3px 3px 3px 3px;
}

#conceptTree > div, #searchResultDiv > div
{
	/*border-right:1px solid black;*/
	border-right-width:0px;
}

#conceptTree > div
{
	margin-top:0px;
	border-left:0px;
	margin-left:0px;
}

#conceptTree > div:first-child
{
	margin-top:10px;	
}

.treeItem
{
	padding-top:5px;
	cursor: pointer;
	background-color:white;
	border-top:1px solid black;
	border-left:1px solid black;
	margin-left:20px;
	/*background-image:url('../images/blackdot.png');*/
	background-position: 10px 0px;
    background-repeat: repeat-y;
	clear:left;
	display:none;
}

#searchDiv .expandDiv
{
	width:0px;
}

/*.treeItem span
{
	display:inline-block;
	margin-left:5px;
	margin-bottom:5px;
}

.treeItem:hover
{
	background-color:#DDD;
}*/

.treeItem:last-child
{
	border-bottom:1px solid black;	
}

.expanded > .expandDiv, .collapsed > .expandDiv
{
	background-repeat:no-repeat;	
	background-position: 0px 0px;
}

.expandDiv
{
	background-image:url('../images/leafConcept.gif');
}

.expanded > .expandDiv
{
	background-image:url('../images/minusConcept.gif');
}
.expanded.isCollection > .expandDiv
{
	background-image:url('../images/minusCollection.gif');
}

.collapsed > .expandDiv
{
	background-image:url('../images/plusConcept.gif');
}
.collapsed.isCollection > .expandDiv
{
	background-image:url('../images/plusCollection.gif');
}

.treeItem.isModifier
{
	filter: hue-rotate(270deg);	
	font-style:italic;
}

.treeItem.isModifier .treeItemStatusDiv
{
	filter: hue-rotate(90deg);
	font-style:normal;
}

.treeItem > .treeItemTitleDiv > .treeItemStatusDiv
{
	display:inline-block;
	background-color:#666666;
	font-size:10px;
	font-family:"arial";
	font-weight:bold;
	padding:0px 5px 0px 5px;
	border-radius: 3px;
	margin-left:5px;
	margin-top:0px;
	color:#333;
}

.treeItem.isOnDraft > .treeItemTitleDiv > .treeItemStatusDiv.draft
{
	background-color:#FFEB0F;
}

.treeItem.isObsolete > .treeItemTitleDiv > .treeItemStatusDiv.obsolete
{
	background-color:#FFBFBF;
}

.treeItem.isNew > .treeItemTitleDiv > .treeItemStatusDiv.new
{
	background-color:#71E161;
}

.treeItem.currentDetailsSource, .treeItem.currentDetailsSource:hover
{
	background-color:#999;
}

.treeContentItem.activeTreeContentDiv
{
	display:block;
}

.expandDiv
{
	height:25px;
	width:30px;
	display:block;
	float:left;
}

.treeItemTitleDiv
{
	display:block;
	min-height:23px;
	margin-top:2px;
	clear:right;
	margin-left:20px;
}

.expanded > .treeItemTitleDiv
{
	border-left:0px solid black;
}

.treeItemInfoDiv, .treeItemInfoTypeDiv
{
	display:block;
	padding:0px;
	font-size: 10px;
	clear:none;
}

.treeItemInfoDiv
{
	padding-left:20px;	
}

.treeItemInfoTypeDiv
{
	float:left;
	font-weight:bold;
}

#searchDiv
{
	overflow:hidden;
	display:flex;
	flex-direction: column;
	height:100%;
}

#searchResultDiv
{
	overflow-y:auto;
	overflow-x:hidden;
	flex:1;
}

#searchDiv .treeItem
{
	border-left:0px;
	margin-left:10px;
}

#searchDiv .treeItem:last-child
{
	margin-bottom: 10px;
}

#searchDiv input
{
	margin-left:10px;
	margin-top:10px;
	margin-bottom:10px;
	padding:0px;
	border:1px solid #999;
	display:inline-block;
}

#searchDiv input[type='text']
{
	width:calc(100% - 130px);
}

#searchDiv input[type='submit']
{
	width:90px;
	cursor:pointer;
}

#logoDiv
{
	display:flex;
	justify-content: space-evenly;
	align-items: center;
	padding:10px;
}

#logoDiv img
{
	max-height:70px;
	padding:0px;
	max-width:100%;
}

/* menu */

.modulesMenuItem:hover, .treeMenuItem:hover
{
	background-color:#999;
}

.activeMenuItemDiv
{
	border-bottom:0px;
	background-color:#FFF;
}

/* content */

.moduleContentDiv
{
	/*width:478px;
	clear:left;*/
	padding:10px;
	display:none;
	overflow-y:auto;
	overflow-x:hidden;
	width:calc(100% - 20px);
}

.moduleContentDiv h3
{
	margin-bottom:5px;
	margin-top:0px;
}

.moduleContentDiv.activeModuleContentDiv
{
	display:block;
}

.treeItem .searchHighlight
{
	background-color: yellow;
	margin-left:0px;
}

.moduleContentDiv > div
{
	display:flex;
	/*flex-direction: row;
	flex-wrap: wrap;
	align-items: flex-start;*/
}

.infoDiv
{
	display:none;
	border-left: 1px solid black;
	border-top:10px solid black;
	padding:10px;
	margin-bottom: 30px;
}
#restInfoDiv
{
	min-width:100px;
	width:calc(100% - 350px);	
}
#aggregatedInfoDiv
{
	width:300px;
	margin-left: 20px;
}
#aggregatedInfoDiv > div
{
	filter: opacity(20%);
	padding-bottom:5px;
	margin-bottom:15px;
}
#aggregatedInfoDiv > div.filled
{
	filter: opacity(100%);
}

.discussionPostsContainerDiv
{
	border:1px solid black;
	margin-top:20px;
	padding-left:10px;
	width:100%;
	box-sizing: border-box;
	clear:both;
	display:flex;
	flex-direction:column;
	padding-top:10px;
	padding-bottom:0px;
}

.discussionPostDiv
{
	border:1px solid black;
	padding-left:20px;
	display:flex;
	flex-direction: row;
	background-color:white;
	border-bottom:0px solid black;
	border-left: 1px solid black;
	box-sizing: border-box;
	margin-top:0px;
	width:100%;
	clear:both;
	border-right:0px;
}

.discussionPostDiv.firstPost
{
	border-left:0px;
	border-top:0px;
}

.discussionPostDiv:last-child
{
	margin-bottom:10px;
}

.discussionPostDiv:first-of-type
{
	margin-top:0px;
}

.discussionPostDiv.collapsed
{
	height:78px;
	overflow-y:hidden;
}

.discussionPostDiv.collapsed > .discussionPostDiv
{
	display:none;
}

.discussionPostTitleDiv
{
	padding-top:10px;
	padding-bottom:10px;
	/*width:calc(100% - 140px);*/
	flex:1;
}

.discussionPostTitleDiv textarea
{
	width:100%;
	height:100px;
}

.discussionPostInfoDiv
{
	padding-top:10px;
	padding-right:10px;
	text-align:center;
	font-size:12px;
	width:100px;
	/*float:right;*/
	display:flex;
	flex-direction:column;
}

.addDiscussionPostDiv
{
	position:relative;
	border:1px solid black;
	width:100%;
	height:30px;
	padding-top:3px;
	overflow:hidden;
	margin-bottom:0px;
	box-sizing: border-box;
	margin-right:10px;
	cursor:pointer;
	text-align:center;
	padding-left:20px;
	padding-right:20px;
}

.discussionPostsContainerDiv .addDiscussionPostDiv
{
	border-right:0px solid black;
	border-bottom:0px;
}

.editPostDiv:hover, .deletePostDiv:hover
{
	cursor:pointer;
	text-decoration:underline;
}

.addDiscussionPostDiv .addDiscussionPostButtonDiv
{
	font-weight:bold;
	display:inline-block;
	position: relative;
	width:100%;
	margin:auto;
}

.discussionPostForm
{
	width:100%;
	text-align:left;
	display:block;
	position:relative;
	overflow:hidden;
	margin-top:5px;
}

#discussionThreadsContainerDiv input[type='text'], #discussionThreadsContainerDiv textarea, #discussionThreadsContainerDiv input[type='submit'], #discussionThreadsContainerDiv input[type='button']
{
	border:1px solid black;
	box-sizing: border-box;
}

#discussionThreadsContainerDiv input[type='button'], #discussionThreadsContainerDiv input[type='submit']
{
	margin-left:10px;
	margin-top:10px;
	margin-bottom:10px;
	margin-right:0px;
	float:right;
	padding:10px;
	cursor:pointer;
}

.discussionPostCancelButton
{
	clear:right;
}

.addDiscussionPostDiv.expanded
{
    animation: yourCustomAnimation 0.3s;
    animation-fill-mode: forwards;
	animation-direction: normal;
	animation-timing-function: ease;
}
@keyframes yourCustomAnimation {
	100% {
		height:250px;
		width:100%;
		margin-right:0px;
	}
}

.discussionPostDiv > .addDiscussionPostDiv
{
	border-right-width:0px;
}

.discussionPostDiv > .addDiscussionPostDiv
{
	margin-bottom: 10px;
}

.discussionAuthorInput, .discussionPostInput
{
	width:100%;
}

#tooltipDiv
{
	border:1px solid black;
	background-color:#FFF;
	position:fixed;
	padding:10px;
	display: none;
	z-index:1000;
}

.treePathDiv:after
{
    content: ' ';
    display: block;
    clear: both;
}

.headPathDiv
{
	display:inline-block;
	float:left;
	clear:both;
	padding-top:5px;
}

.headPathDiv:hover
{
	cursor:pointer;
	text-decoration:underline;
}

/*

div.detailsButton
{
	display:inline-block;
	float:right;
	margin-right:5px;
	padding-left:3px;
	padding-right:3px;
	cursor:pointer;
}

div.infoButton
{
	background-color:#08088A;
	color:#FFF;
}

div.discussionButton
{
	background-color:#61210B;
	color:#FFF;	
}

div.infoButton:hover
{
	background-color:#FFF;
	color:#999;
}

*/

.loading
{
	background-image:url('images/loading.gif');
	background-size: 20px 20px;
	width:20px;
	height:20px;
	display:inline-block;
}

